--- a/Day 2_Practice.ipynb
+++ b/Day 2_Practice.ipynb
@@ -296,6 +296,83 @@
    "cell_type": "markdown",
    "id": "2eaf9686-04c2-4e4f-a1ec-28089b5e9538",
    "metadata": {},
+   "source": [
+    "# Cross product "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "f4c0d0db-8078-4d74-80e9-8c4eaf7d75f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.348469228349542\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mod(mat):\n",
+    "    return np.sqrt(np.dot(mat,mat))\n",
+    "\n",
+    "def matrix_cross(cos):\n",
+    "    sin = np.sqrt(1 - cos**2);\n",
+    "    return mod(A) * mod(B) * sin\n",
+    "\n",
+    "\n",
+    "print(matrix_cross(result))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6443758-c357-44a8-9bc4-814626402eb7",
+   "metadata": {},
+   "source": [
+    "# Eignen "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "e6d5c8e0-777b-438a-a060-aecbd1e4cffb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [4 5]]\n",
+      "\n",
+      "[-0.46410162  6.46410162]\n",
+      "\n",
+      "[[-0.80689822 -0.34372377]\n",
+      " [ 0.59069049 -0.9390708 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mat = np.array([[1,2],[4,5]]) \n",
+    "\n",
+    "print(mat) \n",
+    "print(\"\") \n",
+    "evalue, evect = np.linalg.eig(mat) \n",
+    "  \n",
+    "print(evalue) \n",
+    "print(\"\") \n",
+    "  \n",
+    "print(evect)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ae4daa0-7811-40e4-9622-bc6fe3dae538",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
